# STRIDE

./: BOM.xls  README.md
Software/: readme.md
Software/ROS2/communication/: CMakeLists.txt  package.xml  readme.md
Software/ROS2/communication/msg/: ActuatorCmds.msg  ContactState.msg  MotionCommands.msg
Software/ROS2/hardware/: CMakeLists.txt  package.xml  readme.md
Software/ROS2/hardware/include/: imu_lib.hpp  low_pass_filter.hpp  moving_average_filter.hpp
Software/ROS2/hardware/launch/: hardware_launch.py
Software/ROS2/hardware/src/: contact_sensor_node.cc  imu_i2c.c  imu_lib.cpp  imu_node.cc  joint_comm_node.cc  roll_velocity_node.cc
Software/ROS2/hlip/: CMakeLists.txt  readme.md
Software/ROS2/hlip/include/Expressions/: CGvec_five_link_walker.mexw64  COM_velocity.hh  COM_velocity.mexw64  Ge_vec_Robot_Assembly_v3.hh  Ge_vec_Robot_Assembly_v3_straight_leg.mexw64  Ge_vec_Robot_Assembly_v3_straight_leg_TPU_foot.cc  Ge_vec_Robot_Assembly_v3_straight_leg_TPU_foot.mexw64  J_LegL.cc  J_LegL.hh  LegL.cc  LegL.mexw64  Mmat1_Robot_Assembly_v3_straight_leg_TPU_foot.cc  Mmat4_Robot_Assembly_v3_straight_leg_TPU_foot.cc  Mmat4_Robot_Assembly_v3_straight_leg_TPU_foot.mexw64  dJ_COMPosition.hh  dJ_LegL.mexw64  dJ_leftToe.cc  dJ_pelvis_ori.cc  dJ_pelvis_ori.mexw64  dJ_pelvis_pos.mexw64  pelvis_ori.cc  pelvis_pos.hh  pelvis_vel.mexw64  vHip.mexw64  vLeftToe.hh  vLegL.mexw64  vRightToe.cc
Software/ROS2/hlip/include/Hlip/: FiveLinkWalker_HLIP.hpp  HLIP.hpp  PID_controller.hpp  bezier_tools.hpp
Software/ROS2/hlip/include/Other_Expressions/Expressions_origin_ok_ver/: Ce1_vec2_five_link_walker.mexw64  Ce1_vec5_five_link_walker.mexw64  Ce1_vec6_five_link_walker.cc  Ce1_vec6_five_link_walker.mexw64  Ce1_vec7_five_link_walker.cc  Ce1_vec_L1_J1_five_link_walker.hh  Ce1_vec_L1_J3_five_link_walker.mexw64  Ce1_vec_L1_J4_five_link_walker.hh  Ce1_vec_L1_J4_five_link_walker.mexw64  Ce1_vec_L1_J5_five_link_walker.cc  Ce1_vec_L1_J7_five_link_walker.hh  Ce1_vec_L2_J4_five_link_walker.hh  Ce1_vec_L2_J4_five_link_walker.mexw64  Ce1_vec_L2_J6_five_link_walker.cc  Ce1_vec_L2_J6_five_link_walker.mexw64  Ce1_vec_L2_J7_five_link_walker.cc  Ce1_vec_L3_J1_five_link_walker.mexw64  Ce1_vec_L3_J2_five_link_walker.mexw64  Ce1_vec_L3_J4_five_link_walker.mexw64  Ce1_vec_L3_J6_five_link_walker.cc  Ce1_vec_L4_J2_five_link_walker.hh  Ce1_vec_L4_J2_five_link_walker.mexw64  Ce1_vec_L4_J6_five_link_walker.cc  Ce1_vec_L4_J7_five_link_walker.hh  Ce1_vec_L5_J1_five_link_walker.cc  Ce1_vec_L5_J1_five_link_walker.mexw64  Ce1_vec_L5_J3_five_link_walker.mexw64  Ce1_vec_L5_J6_five_link_walker.cc  Ce1_vec_L5_J6_five_link_walker.mexw64  Ce1_vec_L5_J7_five_link_walker.hh  Ce1_vec_L6_J1_five_link_walker.hh  Ce1_vec_L6_J4_five_link_walker.cc  (+102 more)
Software/ROS2/hlip/src/: FiveLinkWalker_HLIP.cpp  HLIP.cpp  LIP.cpp  hlip_controller.cpp  simulator_controller.cpp  simulator_hardware_bridge.cpp
Software/communication/: CMakeLists.txt  package.xml  readme.md
Software/communication/msg/: ContactForce.msg  JointState.msg  PitchState.msg
Software/description/: CMakeLists.txt  package.xml  readme.md
Software/description/include/description/: robotConfig.hpp  ros2MessageHandler.hpp
Software/description/model/planarBiped/: Robot_TPU_foot.xml
Software/hlip/: CMakeLists.txt  package.xml  readme.md
Software/hlip/include/Expressions/: CGvec_five_link_walker.cc  CGvec_five_link_walker.hh  COMPosition.cc  COMPosition.hh  Ge_vec_Robot_Assembly_v3.mexw64  Ge_vec_Robot_Assembly_v3_straight_leg.cc  Ge_vec_Robot_Assembly_v3_straight_leg.hh  Ge_vec_Robot_Assembly_v3_straight_leg_TPU_foot.hh  J_COMPosition.cc  J_COMPosition.mexw64  J_hip.hh  J_hip.mexw64  J_leftToe.cc  J_pelvis_ori.cc  J_pelvis_ori.mexw64  J_pelvis_pos.cc  J_pelvis_pos.hh  J_rightToe.cc  J_rightToe.hh  J_rightToe.mexw64  LegL.hh  Mmat1_Robot_Assembly_v3_straight_leg_TPU_foot.hh  Mmat1_Robot_Assembly_v3_straight_leg_TPU_foot.mexw64  Mmat2_Robot_Assembly_v3_straight_leg_TPU_foot.cc  Mmat2_Robot_Assembly_v3_straight_leg_TPU_foot.hh  Mmat2_Robot_Assembly_v3_straight_leg_TPU_foot.mexw64  Mmat3_Robot_Assembly_v3_straight_leg_TPU_foot.cc  Mmat3_Robot_Assembly_v3_straight_leg_TPU_foot.mexw64  Mmat4_Robot_Assembly_v3_straight_leg_TPU_foot.hh  Mmat5_Robot_Assembly_v3_straight_leg_TPU_foot.hh  Mmat6_Robot_Assembly_v3_straight_leg_TPU_foot.cc  Mmat6_Robot_Assembly_v3_straight_leg_TPU_foot.mexw64  dJ_COMPosition.cc  dJ_COMPosition.mexw64  dJ_hip.cc  dJ_hip.hh  dJ_hip.mexw64  dJ_leftToe.mexw64  dJ_pelvis_ori.hh  dJ_pelvis_pos.hh  (+32 more)
Software/hlip/include/Hlip/: IK_Calibration.hpp  IK_LM.hpp  IK_newton.hpp  LIP.hpp  hardware_controller.hpp  sim_controller.hpp
Software/hlip/include/Other_Expressions/Expressions_origin_ok_ver/: CGvec_five_link_walker.cc  CGvec_five_link_walker.hh  COMPosition.cc  COMPosition.hh  COM_velocity.cc  COM_velocity.hh  COM_velocity.mexw64  Ce1_vec1_five_link_walker.cc  Ce1_vec2_five_link_walker.cc  Ce1_vec2_five_link_walker.hh  Ce1_vec3_five_link_walker.cc  Ce1_vec3_five_link_walker.mexw64  Ce1_vec4_five_link_walker.cc  Ce1_vec4_five_link_walker.mexw64  Ce1_vec5_five_link_walker.hh  Ce1_vec6_five_link_walker.hh  Ce1_vec7_five_link_walker.hh  Ce1_vec_L1_J1_five_link_walker.cc  Ce1_vec_L1_J2_five_link_walker.cc  Ce1_vec_L1_J2_five_link_walker.hh  Ce1_vec_L1_J3_five_link_walker.cc  Ce1_vec_L1_J4_five_link_walker.cc  Ce1_vec_L1_J5_five_link_walker.hh  Ce1_vec_L1_J5_five_link_walker.mexw64  Ce1_vec_L1_J6_five_link_walker.cc  Ce1_vec_L1_J6_five_link_walker.hh  Ce1_vec_L1_J7_five_link_walker.cc  Ce1_vec_L1_J7_five_link_walker.mexw64  Ce1_vec_L2_J1_five_link_walker.cc  Ce1_vec_L2_J1_five_link_walker.hh  Ce1_vec_L2_J1_five_link_walker.mexw64  Ce1_vec_L2_J2_five_link_walker.cc  Ce1_vec_L2_J2_five_link_walker.hh  Ce1_vec_L2_J2_five_link_walker.mexw64  Ce1_vec_L2_J4_five_link_walker.cc  Ce1_vec_L2_J5_five_link_walker.hh  Ce1_vec_L2_J5_five_link_walker.mexw64  Ce1_vec_L2_J6_five_link_walker.hh  Ce1_vec_L2_J7_five_link_walker.hh  Ce1_vec_L2_J7_five_link_walker.mexw64  (+267 more)
Software/hlip/params/: control_param.yaml
Software/hlip/src/: bezier_tools.cpp  ekf.cpp  hardware_controller.cpp
(+859 files in other folders)
