<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>communication</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="well.robotics@gmail.com">Xiaobin Xiong</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
 
  <depend>backward_ros</depend>
 
  <depend>rclcpp</depend>
 
  <!-- <depend>ros_utilities</depend> -->
  <!-- <depend>control_common_toolbox</depend> -->

  <depend>description</depend>
  <!-- <depend>eom</depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
